--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,97 +1,155 @@
 .section2 {
-	display: none;
+    display: none;
 }
 
 .box--productos {
-	width: 15%;
+    width: 15%;
     height: 300px;
-	margin: auto;  
-	
-	img {
-		width: 100%;
-		height: 90%;
-		border-radius: 8% 10%;
-		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
-		object-fit: cover;
-	}  
+    margin: auto;
 
-	&:hover {
-		transform: scale(1.1);
-		transition: 0.7s;
-		opacity: 0.9;
+    img {
+        width: 100%;
+        height: 90%;
+        border-radius: 8% 10%;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+        object-fit: cover;
+    }
 
-		 .middle {
-			transition: 0.3s ease;
-			opacity: 1;
-		  }
-	}
+    &:hover {
+        transform: scale(1.1);
+        transition: 0.7s;
+        opacity: 0.9;
+
+        .middle {
+            transition: 0.3s ease;
+            opacity: 1;
+        }
+    }
 }
 
 .middle {
-	
-	opacity: 0;
-	position: absolute;
-	text-align: center;
-	top: 40%;
-	width: 90%;
-	left: 5%;
 
-	.text {
-		background: linear-gradient(45deg, rgba(0,61,80,1) 2%, rgba(0,212,255,0.7455357142857143) 100%);
-		font-family: Helvetica, sans-serif;
-		font-weight: bold;
-		color: #fff;
-		font-size: 80%;
-		padding: 10px 18px;
-		border-radius: 20px;
-	}
- }
-  
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    width: 90%;
+    left: 5%;
+
+    .text {
+        background: linear-gradient(45deg, rgba(0, 61, 80, 1) 2%, rgba(0, 212, 255, 0.7455357142857143) 100%);
+        font-family: Helvetica, sans-serif;
+        font-weight: bold;
+        color: #fff;
+        font-size: 80%;
+        padding: 10px 18px;
+        border-radius: 20px;
+    }
+}
+
 /* Section de productos */
 .accordion {
-	width: 95%;
-	max-width: 1200px;
-	margin: 2rem auto;
-  }
-  .accordion__item {
-	background: linear-gradient(45deg, rgba(0,61,80,1) 2%, rgba(0,212,255,0.7455357142857143) 100%);
-	color: #fff;
-	margin: 1rem 0;
-	border-radius: 0.5rem;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
-  }
-  .accordion__item__header {
-	padding: 0.5rem 3rem 0.5rem 1rem;
-	min-height: 3.5rem;
-	line-height: 1.25rem;
-	font-weight: bold;
-	display: flex;
-	align-items: center;
-	position: relative;
-	cursor: pointer;
-  }
-  .accordion__item__header::after {
-	content: "\002B";
-	font-size: 2rem;
-	position: absolute;
-	right: 1rem;
-	color: $color1;
-  }
-  .accordion__item__header.active::after {
-	content: "\2212";
-  }
-  .accordion__item__body {
-	max-height: 0;
-	overflow: hidden;
-	transition: max-height 0.2s ease-out;
+    width: 95%;
+    max-width: 1200px;
+    margin: 2rem auto;
+}
+
+.accordion__item {
+    background: linear-gradient(45deg, rgba(0, 61, 80, 1) 2%, rgba(0, 212, 255, 0.7455357142857143) 100%);
+    color: #fff;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+}
+
+.accordion__item__header {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+    min-height: 3.5rem;
+    line-height: 1.25rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+}
+
+.accordion__item__header::after {
+    content: "\002B";
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
+    color: $color1;
+}
+
+.accordion__item__header.active::after {
+    content: "\2212";
+}
+
+.accordion__item__body {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+
+}
+
+.accordion__item__body__content {
+    padding: 1rem;
+    line-height: 1.5rem;
+    color: #fff;
+    border-top: 1px solid;
+    border-image: linear-gradient(to right, transparent, #34495e, ) 1;
+}
+
+
+.container {
+    grid-column: 1/4;
+    grid-row: 4/5;
+	padding: 10px;
+
+	@media screen and (max-width: 768px) {
+		grid-column: 1/2;
+    	grid-row: 5/6;
+	}
+
 	
-  }
-  .accordion__item__body__content {
-	padding: 1rem;	
-	line-height: 1.5rem;
-	color: #fff;
-	border-top: 1px solid;
-	border-image: linear-gradient(to right, transparent, #34495e, ) 1;
+}
+
+  
+.galeria{
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	grid-auto-rows: minmax(200px, auto);
+	gap: 20px;
+	padding: 20px;
+	grid-auto-flow: dense;
   }
   
- 
+  @media (min-width: 600px) {
+	.wide {
+	  grid-column: span 2;
+	}
+  
+	.tall {
+	  grid-row: span 2;
+	}
+  }
+  
+
+.galeria-item {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  
+	background-color: #03afff;
+	border-radius: 4px;
+	transition: transform 0.3s ease-in-out;
+  
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+
+	&:hover {
+		transform: scale(1.04);
+	  }
+  }
+  
