--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 10px auto;
+    margin: 20px auto;
     width: 100%;
 
     .form {
@@ -56,7 +56,7 @@
         padding: 14px 28px;
         font-size: 16px;
         cursor: pointer;
-        margin-bottom: 10px;
+        margin: 15px;
 
         &:hover {
             outline: none;
@@ -68,15 +68,23 @@
 
 .contacto--mapa {
     width: 100%;
+    display: grid;
+    gap: 5px;
 }
 
 .box__mapa {
 
-    width: 98%;
+    width: 95%;
     height: auto;
     margin: 0 auto;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-    text-align: center;
+    text-align: center;   
+    transition-duration: 5s;
+  
+	&:hover{
+	
+        background: linear-gradient(45deg, rgba(218, 219, 219, 0.746) 2%, rgb(234, 241, 243) 100%);
+	}
 
     i {
         font-size: 24px;
@@ -84,7 +92,8 @@
         padding: 5px;
 
         &:hover {
-            color: #777;
+            -webkit-transform:scale(1.3);transform:scale(1.3);
+            color: #e97305;
         }
     }
 
