--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,27 +9,34 @@
 #promo {
 	width: 100%;
     display: flex;
-	flex-direction: row;	
+	flex-direction: row;
+	align-items: center;	
+
+	@media screen and (max-width: 576px) {
+
+		flex-direction: column;
+	}
 	
 	.promo__img {
 		width: 20%;
-		text-align: center;
-
+	
 		img{
 			width: 120px;
 			margin-top: 10px;
+			
 			@media screen and (max-width: 576px) {
-				width: 60px;
+				width: 100%;
+				margin: auto;
 			}
 		}	
 	}
 
 	.promo__text{
-		width: 50%;
+		width: 40%;
 		background: linear-gradient(to left, transparent, #003d50);
 
 		@media screen and (max-width: 576px) {
-			width: 56%;
+			width: 95%;
 		}
 
 		p{
@@ -39,25 +46,33 @@
 			text-align: justify;
 
 			@media screen and (max-width: 576px) {
-				font-size: 12px;
+				font-size: 15px;
+				padding: 5px;
 			}
 		}
 	}
 
 	.promo__redes{
-		width: 15%;
+		width: 30%;
 		display: flex;
 		flex-direction:column;
 		align-items: center;
 		background: linear-gradient(to right, transparent, #003d50);
 
+		@media screen and (max-width: 576px) {
+			flex-direction:row;
+			width: 100%;
+			justify-content: center;
+		}
+
 		i{
 
 			@media screen and (max-width: 576px) {
-				font-size: 30px;
+				font-size: 35px;
+				padding: 20px;
 			}
 			color: #e97305;
-			font-size: 50px;
+			font-size: 45px;
 			padding: 5px;
 			text-decoration: none;
 		}
@@ -72,7 +87,7 @@
 	text-align: center;
 
 	p{
-		font-size: 15px;
+		font-size: 16px;
 		padding: 10px;	
 	}
 	
