--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -159,7 +159,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 10px auto;
+  margin: 20px auto;
   width: 100%;
 }
 
@@ -205,7 +205,7 @@
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin: 15px;
 }
 
 #contacto-form .bottom:hover {
@@ -216,15 +216,24 @@
 
 .contacto--mapa {
   width: 100%;
+  display: -ms-grid;
+  display: grid;
+  gap: 5px;
 }
 
 .box__mapa {
-  width: 98%;
+  width: 95%;
   height: auto;
   margin: 0 auto;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
           box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
   text-align: center;
+  -webkit-transition-duration: 5s;
+          transition-duration: 5s;
+}
+
+.box__mapa:hover {
+  background: linear-gradient(45deg, rgba(218, 219, 219, 0.746) 2%, #eaf1f3 100%);
 }
 
 .box__mapa i {
@@ -234,7 +243,9 @@
 }
 
 .box__mapa i:hover {
-  color: #777;
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  color: #e97305;
 }
 
 .box__mapa h4 {
@@ -262,8 +273,8 @@
   width: 100%;
   height: 90%;
   border-radius: 8% 10%;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(122, 103, 103, 0.25);
+          box-shadow: 0 2px 5px 0 rgba(122, 103, 103, 0.25);
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -447,11 +458,22 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 576px) {
+  #promo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 #promo .promo__img {
   width: 20%;
-  text-align: center;
 }
 
 #promo .promo__img img {
@@ -461,19 +483,20 @@
 
 @media screen and (max-width: 576px) {
   #promo .promo__img img {
-    width: 60px;
+    width: 100%;
+    margin: auto;
   }
 }
 
 #promo .promo__text {
-  width: 50%;
+  width: 40%;
   background: -webkit-gradient(linear, right top, left top, from(transparent), to(#003d50));
   background: linear-gradient(to left, transparent, #003d50);
 }
 
 @media screen and (max-width: 576px) {
   #promo .promo__text {
-    width: 56%;
+    width: 95%;
   }
 }
 
@@ -486,12 +509,13 @@
 
 @media screen and (max-width: 576px) {
   #promo .promo__text p {
-    font-size: 12px;
+    font-size: 15px;
+    padding: 5px;
   }
 }
 
 #promo .promo__redes {
-  width: 15%;
+  width: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -506,16 +530,30 @@
   background: linear-gradient(to right, transparent, #003d50);
 }
 
+@media screen and (max-width: 576px) {
+  #promo .promo__redes {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 #promo .promo__redes i {
   color: #e97305;
-  font-size: 50px;
+  font-size: 45px;
   padding: 5px;
   text-decoration: none;
 }
 
 @media screen and (max-width: 576px) {
   #promo .promo__redes i {
-    font-size: 30px;
+    font-size: 35px;
+    padding: 20px;
   }
 }
 
@@ -527,7 +565,7 @@
 }
 
 .footer1 p {
-  font-size: 15px;
+  font-size: 16px;
   padding: 10px;
 }
 
@@ -710,7 +748,7 @@
 @media screen and (max-width: 768px) {
   .video {
     width: 95%;
-    padding: 10px;
+    padding: 5px;
   }
 }
 
@@ -921,7 +959,7 @@ body {
   margin-top: 4px;
   width: 100%;
   margin-bottom: 7px;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: bolder;
   text-transform: uppercase;
   color: #003d50;
@@ -951,13 +989,19 @@ body {
 .box__video {
   width: 23%;
   border: 1px solid rgba(153, 153, 153, 0.288);
-  margin: 0 auto;
+  margin: 10px, auto;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
           box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
+}
+
+.box__video:hover {
+  background: linear-gradient(45deg, rgba(218, 219, 219, 0.746) 2%, #eaf1f3 100%);
 }
 
 .box__video:hover i {
-  color: #777;
+  color: #e97305;
 }
 
 .box__video i {
@@ -1042,8 +1086,8 @@ body {
     display: grid;
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
-    -ms-grid-rows: (auto)[30];
-        grid-template-rows: repeat(30, auto);
+    -ms-grid-rows: (auto)[40];
+        grid-template-rows: repeat(40, auto);
         grid-template-areas: "carrusel  " "redes--uno " "redes--dos " "section " "section2  " "article " "article2  " "contacto ";
   }
   /* inicio menú */
@@ -1152,8 +1196,8 @@ body {
   .contenedor {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
-    -ms-grid-rows: (auto)[28];
-        grid-template-rows: repeat(28, auto);
+    -ms-grid-rows: (auto)[40];
+        grid-template-rows: repeat(40, auto);
         grid-template-areas: "carrusel  " "redes--uno " "redes--dos " "section " "section2  " "article " "article2  " "contacto ";
   }
   .logo {
