--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,8 +13,8 @@ $color4: white;
 .logo
 {
 	padding-top: 6px;
-    width: 300px;  
-    height:80px;
+    width: 307px;  
+    height:70px;
 	
 }
 
@@ -91,12 +91,13 @@ $color4: white;
 	text: {
 		decoration: none;
 		transform: capitalize;
-		shadow: 0 0 1em $color4;
+		shadow: 0 0 2em $color1;
 	}
 
 	padding: 6px;
 	color: $color4;
-	background-color: $color2;
+	border: 3px solid $color2;
+	border-radius: 20px;
 
 	
 
@@ -104,7 +105,8 @@ $color4: white;
 
 .linkCompra:hover {
 	background-color: $color4;
-	color: $color2;
+	color: $color1;
+	border: 3px solid $color1;
 }
 
 
