--- a/scss/_franquicias.scss
+++ b/scss/_franquicias.scss
@@ -35,7 +35,7 @@
 
 }
 
-.content--sucursales{
+.content--franquicias{
     padding-top: 10px;
     grid-row: 1/3;
     grid-column: 1/4;
@@ -51,7 +51,7 @@
   
 }
 
-.sucursales__titulo {
+.franquicias__titulo {
     @include titulo(45px);
     width:40%;   
 
@@ -75,7 +75,7 @@
 
 }
 
-.box--sucursales{
+.box--franquicias{
 width: 100%;
 display: flex;
 flex-wrap: wrap;
