--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -13,8 +13,10 @@
 
     img {
         vertical-align: middle;
-        max-height: 400px;
+        max-height: 500px;
         border-radius: 0 0 30% 0;
+        object-fit: cover;
+        
     }
 
     .name {
@@ -47,7 +49,7 @@
 
 /* Slideshow container */
 .carrusel__contenedor {
-    max-width: 1200px;
+    max-width: 1400px;
     position: relative;
     margin: auto;
 }
